[package]
name = "swift_bot_api"
version = "0.1.3"
edition = "2021"
authors = ["Alan Koterba alankoterba12312@gmail.com"]
description = "SwiftBot Rust Library"
repository = "https://github.com/koterba/swift_bot_api"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rascam = "0.0.2"
rppal = "0.15.0"
